# burnrate

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
burnrate/: __init__.py  __main__.py  main.py  pricing.py
burnrate/parsers/: __init__.py  base.py  claude_parser.py  codex_parser.py
parsers/: __init__.py  base.py  claude_parser.py  codex_parser.py
scripts/: smoke_build.py
tempfiles/: IMPLEMENTATION_PLAN.md
tests/: __init__.py  test_claude_parser.py  test_cli.py  test_codex_parser.py  test_file_read_errors.py  test_parser_diagnostics.py  test_parser_validation.py  test_pricing.py  test_undated_projections.py  test_version.py
