[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burnrate"
version = "0.1.1"
description = "Parse LLM usage logs and estimate token usage and cost"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
burnrate = "burnrate.main:run"

[tool.setuptools.packages.find]
include = ["burnrate*"]
